# paidang-rs-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml  production.toml
docs/image/: 审核.md  鉴权.md
docs/superpowers/plans/: 2026-06-25-provider-login-public-customer.md
docs/superpowers/specs/: 2026-06-24-paidang-rs-server-design.md  2026-06-25-provider-login-public-customer-design.md
src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs  response.rs  util.rs
src/domain/: mod.rs
src/domain/auth/: dto.rs  handler.rs  login_handler.rs  mod.rs  router.rs  service.rs
src/domain/booking_logs/: dto.rs  handler.rs  router.rs  service.rs
src/domain/bookings/: dto.rs  handler.rs  mod.rs  router.rs  service.rs
src/domain/date_settings/: dto.rs  handler.rs  router.rs  service.rs
src/domain/date_slots/: dto.rs  handler.rs  router.rs  service.rs
src/domain/files/: dto.rs  handler.rs  router.rs  (+1 more)
src/entity/: booking.rs  booking_log.rs  date_setting.rs  date_slot.rs  gallery.rs  gallery_group.rs  gallery_tag.rs  mod.rs  package.rs  package_gallery.rs  package_item.rs  time_slot_template.rs  user.rs  user_profile.rs
src/middleware/: auth.rs  mod.rs  request_log.rs  role_guard.rs
src/migration/: m20250101_0001_users_profiles.rs  m20250101_0002_packages_items.rs  m20250101_0003_gallerys_groups_tags.rs  m20250101_0004_bookings.rs  mod.rs
tests/: auth_test.rs  bookings_test.rs  common.rs  content_test.rs  files_upload_test.rs  provider_auth_model_test.rs  user_test.rs
(+24 files in other folders)
