[package]
name = "paidang-rs-server"
version = "0.1.0"
edition = "2024"
description = "Self-hosted Rust rewrite of paidang-worker-server (axum + SeaORM + MySQL + Tencent COS)"

[dependencies]
# async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util"] }
# web framework
axum = { version = "0.8", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "catch-panic", "cors"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# errors
thiserror = "2"
anyhow = "1"
# config
config = "0.14"
dotenvy = "0.15"
# misc
chrono = { version = "0.4", features = ["serde"] }
# ORM + migrations (MySQL, tokio + rustls)
sea-orm = { version = "1", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
async-trait = "0.1"
# JWT auth
jsonwebtoken = "9"
# HTTP client (WeChat / Qiniu / COS fallback)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# request validation
validator = { version = "0.20", features = ["derive"] }
# crypto (Qiniu HMAC-SHA1, later)
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
regex = "1"
